# auto_proj

./: AUTHORS  Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.in  configure.scan  libtool
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
doc/: date.xml
src/: Makefile  Makefile.am  Makefile.in  hello  hello.c  hello.h
src/.deps/: hello.Po
src/.libs/: hello  lt-hello
src/liba/: Makefile  Makefile.am  Makefile.in  test2.c  test2.h
src/liba/.deps/: test2.Po
src/libs/: Makefile  Makefile.am  Makefile.in  libtest1.la  test1.c  test1.h  test1.lo
src/libs/.deps/: test1.Plo
src/libs/.libs/: libtest1.la  libtest1.lai  libtest1.so.0.0.0
