#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([hello], [1.0], [dy@qq.com])
AC_CONFIG_SRCDIR([src/hello.c])
AM_INIT_AUTOMAKE(src/hello,1.0)
#AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB
AC_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
# Checks for library functions.

AC_OUTPUT(Makefile
          src/Makefile
          src/libs/Makefile
          src/liba/Makefile
         )
